fixed styling on index page to have 'fixed positioning' for side columns and overflow for middle column

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,6 @@ body {
   font-family: 'Oswald', sans-serif;
   color: #801515;
   text-align: center;
-
 }
 
 li {
@@ -28,51 +27,21 @@ li {
   display: inline-block;
 }
 
-.main-body {
+.main-heading {
   margin-top: 5em;
 }
 
 .main-title {
-  margin-bottom: 2em;
-
+  margin-bottom: 1em;
+  letter-spacing: 2px;
   box-shadow: .4em .4em .25em #801515;
+  text-align: center;
 }
 
-.main-body .main-title h1 {
-  color: #801515;
-}
-
-.main-body {
-  position: relative;
-}
-
-.left .has-form .alert {
-  background-color: #FCECDF;
-  color: #801515;
-}
-
-.left .has-form .alert:hover {
-  background-color: #801515;
-  color: #FCECDF;
-  border-color: #FCECDF;
-}
-
-.has-form .alert {
-  font-family: 'Oswald', sans-serif;
-  color: #FCECDF;
-}
-
-.has-form .form-control {
-  background-color: #FCECDF;
+.main-body-container {
+  border: solid 1px;
   border-color: #801515;
-}
-
-.has-form .form-control:focus {
-  background-color: #801515;
-  color: #FCECDF;
-  border-color: #FCECDF;
-}
-
-.popular-searches {
-  display: block;
+  width: 100%;
+  height: 70vh;
+  margin-left: .1em;
 }
